// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@biorate/pg > cursor 1`] = `null`;

exports[`@biorate/pg > cursor 2`] = `
[
  {
    "count": 1,
    "text": "test1",
  },
  {
    "count": 2,
    "text": "test2",
  },
  {
    "count": 3,
    "text": "test3",
  },
]
`;

exports[`@biorate/pg > select rows from table 1`] = `
[
  {
    "count": 1,
    "text": "test1",
  },
  {
    "count": 2,
    "text": "test2",
  },
  {
    "count": 3,
    "text": "test3",
  },
]
`;

exports[`@biorate/pg > stream 1`] = `
{
  "count": 1,
  "text": "test1",
}
`;

exports[`@biorate/pg > stream 2`] = `
{
  "count": 2,
  "text": "test2",
}
`;

exports[`@biorate/pg > stream 3`] = `
{
  "count": 3,
  "text": "test3",
}
`;
